[gd_scene load_steps=2 format=3 uid="uid://xvli55hg7nf6"]

[ext_resource type="Script" uid="uid://bk5ro2edtxr0q" path="res://scenes/main/spawners/enemy_spawner.gd" id="1_w1txr"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_w1txr")
wave_data_array = null
default_spawn_delay = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="EnemySpawnerTimer" type="Timer" parent="."]

[connection signal="timeout" from="EnemySpawnerTimer" to="." method="_on_enemy_spawner_timer_timeout"]
