class_name EnemySpawner
extends Node2D

@export var wave_data_array : Array = ["Enemy 1", "Enemy 2", "Enemy 3", "Enemy 4"]
@export var default_spawn_delay : float = 1.0

@onready var enemy_spawner_timer: Timer = $EnemySpawnerTimer

var current_spawn_delay : float = 0.0
var current_data_index : int = 0

func _ready() -> void:
	current_spawn_delay = default_spawn_delay
	
	enemy_spawner_timer.wait_time = current_spawn_delay
	
	enemy_spawner_timer.start()


func spawn_entity() -> void:
	if current_data_index > wave_data_array.size():
		printer("Index too large")
		return
	
	print_debug(wave_data_array[current_data_index])


func _on_enemy_spawner_timer_timeout() -> void:
	print_debug("Enemy Spawned! Wooooo : %s" % current_spawn_delay)
	spawn_entity()
	current_data_index += 1
